fix: made link work properly

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h3 style="font-weight: normal;">An open source, lightweight, alternative Discord web client.
       Completely built with HTML, CSS, and JavaScript</h3>
     <h3 style="opacity: .6; font-weight: normal;">(Very early development, not fully functional yet)</h3>
-    <h2><a href="/login.html">login</a></h2>
+    <h2><a href="login.html">login</a></h2>
   </div>
 
 </body>
