fix: made scripts link correctly

--- a/login.html
+++ b/login.html
@@ -12,16 +12,16 @@
   </script>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css"
     onerror='this.href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"'>
-  <link href="/style.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="/base.css">
-  <script src="/lib/rest.js"></script>
-  <script src="/lib/constants.js"></script>
-  <script src="/lib/helpers.js"></script>
-  <script src="/lib/renderers.js"></script>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="base.css">
+  <script src="lib/rest.js"></script>
+  <script src="lib/constants.js"></script>
+  <script src="lib/helpers.js"></script>
+  <script src="lib/renderers.js"></script>
   <script src="https://cordcutters.github.io/markcord/markcord.js"></script>
   <link href="https://cordcutters.github.io/markcord/style.css" rel="stylesheet" type="text/css" />
   <!-- import markcord (md parser) -->
-  <script src="/login.js"></script>
+  <script src="login.js"></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
