--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <title>Cablecord Login</title>
   <script>
     if (localStorage.getItem("token")) {
-      location.href = "/app.html"
+      location.href = "app.html"
     }
   </script>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css"
