--- a/app.html
+++ b/app.html
@@ -8,19 +8,19 @@
   <script>
     window.token = localStorage.getItem("token")
     if (!window.token) {
-      location.href = "/login.html"
+      location.href = "login.html"
     }
   </script>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css"
     onerror='this.href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"'>
 
-  <script src="/lib/constants.js"></script>
-  <script src="/lib/helpers.js"></script>
-  <script src="/lib/renderers.js"></script>
-  <script src="/lib/bitwise.js"></script>
-  <script src="/lib/gateway.js"></script>
-  <script src="/lib/rest.js"></script>
-  <script src="/lib/hookable.js"></script>
+  <script src="lib/constants.js"></script>
+  <script src="lib/helpers.js"></script>
+  <script src="lib/renderers.js"></script>
+  <script src="lib/bitwise.js"></script>
+  <script src="lib/gateway.js"></script>
+  <script src="lib/rest.js"></script>
+  <script src="lib/hookable.js"></script>
   <script async src="https://cordcutters.github.io/markcord/markcord.js"></script>
   <link href="https://cordcutters.github.io/markcord/style.css" rel="stylesheet" type="text/css" />
   <!-- import markcord (md parser) -->
@@ -31,9 +31,9 @@
 
   <script async src="https://unpkg.com/@highlightjs/cdn-assets@11.8.0/highlight.min.js"></script>
   <!-- import highlight.js for cool codeblocks -->
-  <script async defer src="/app.js"></script>
-  <link rel="stylesheet" href="/base.css">
-  <link rel="stylesheet" href="/app.css">
+  <script async defer src="app.js"></script>
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="app.css">
 
 
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
