--- a/app.html
+++ b/app.html
@@ -82,7 +82,7 @@
 
   </main>
 
-  <script>
+<!--   <script>
     if (window.matchMedia("(max-width: 768px)").matches) {
       window.serverBar.addEventListener("wheel", e => {
         if (e.deltaY > 0) {
@@ -93,7 +93,7 @@
         e.preventDefault()
       })
     }
-  </script>
+  </script> -->
 
 </body>
 
