--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <div id="wrap" style="text-align: center; margin-top: 25vh;">
+  <div id="wrap" style="text-align: center; margin-top: 25vh; line-height: 1.5">
     <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g clip-path="url(#clip0_1_296)">
         <rect width="70" height="70" rx="35" fill="#007AFF" />
