if this actually works i'm gonna climax

--- a/index.html
+++ b/index.html
@@ -4,11 +4,37 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Cablecord</title>
+  <title>• Cablecord</title>
+  <script>
+    window.token = localStorage.getItem("token")
+    if (!window.token) {
+      location.href = "login.html"
+    }
+  </script>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css"
     onerror='this.href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"'>
 
+  <script src="lib/constants.js"></script>
+  <script src="lib/helpers.js"></script>
+  <script src="lib/renderers.js"></script>
+  <script src="lib/bitwise.js"></script>
+  <script src="lib/gateway.js"></script>
+  <script src="lib/rest.js"></script>
+  <script src="lib/hookable.js"></script>
+  <script async src="https://cordcutters.github.io/markcord/markcord.js"></script>
+  <link href="https://cordcutters.github.io/markcord/style.css" rel="stylesheet" type="text/css" />
+  <!-- import markcord (md parser) -->
+
+
+  <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.8.0/styles/github-dark-dimmed.min.css">
+
+
+  <script async src="https://unpkg.com/@highlightjs/cdn-assets@11.8.0/highlight.min.js"></script>
+  <!-- import highlight.js for cool codeblocks -->
+  <script async defer src="app.js"></script>
   <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="app.css">
+
 
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -18,51 +44,56 @@
   <link rel="shortcut icon" href="favicon/favicon.ico">
   <meta name="msapplication-config" content="favicon/browserconfig.xml">
 
-  <!-- Embed -->
-  <meta content="Cablecord" property="og:title" />
-  <meta content="Alternative client for Discord" property="og:description" />
-  <meta content="https://cable.laptop-cat.repl.co/" property="og:url" />
-  <meta content="/favicon/favicon-32x32.png" property="og:image" />
-  <meta name="theme-color" data-react-helmet="true" media="(prefers-color-scheme: light)" content="dodgerblue">
+  <!-- <script src="https://unpkg.com/fast-average-color/dist/index.browser.min.js"></script> -->
 
-  <style>
-    body {
-      background-color: var(--background);
-      font-family: var(--primary-font);
-      color: var(--text);
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 1rem;
-    }
 
-    a {
-      color: dodgerblue;
-    }
-  </style>
 </head>
 
 <body>
-  <div id="wrap" style="text-align: center; margin-top: 25vh; line-height: 1.5">
-    <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g clip-path="url(#clip0_1_296)">
-        <rect width="70" height="70" rx="35" fill="#007AFF" />
-        <path
-          d="M41.1374 14.7656L45.4731 19.1013L35.6006 28.9739L40.8659 34.2393L50.7385 24.3667L55.0742 28.7025L45.2017 38.575L49.4221 42.7955L38.2332 53.9844C36.0522 56.1654 32.5162 56.1654 30.3352 53.9844L27.7025 51.3517L3.74564 75.3086L-5.46875 66.0942L18.4881 42.1373L15.8554 39.5046C13.6744 37.3236 13.6744 33.7876 15.8554 31.6066L27.0443 20.4177L31.2648 24.6382L41.1374 14.7656Z"
-          fill="white" />
-      </g>
-      <defs>
-        <clipPath id="clip0_1_296">
-          <rect width="70" height="70" rx="35" fill="white" />
-        </clipPath>
-      </defs>
-    </svg>
 
-    <h1>Cablecord for Discord</h1>
-    <h3 style="font-weight: normal;">An open source, lightweight, alternative Discord web client.
-      Completely built with HTML, CSS, and JavaScript</h3>
-    <h3 style="opacity: .6; font-weight: normal;">(Very early development, not fully functional yet)</h3>
-    <h2><a href="login.html">login</a></h2>
-  </div>
+  <main>
+
+
+    <div id="server-bar"></div>
+
+    <div id="channel-bar"></div>
+
+
+    <div id="chat-window">
+      <div id="chat-window-inner">
+        <h1 class="welcome-text" id="welcome">Welcome to Cablecord!</h1>
+        <h2 class="welcome-text">Choose a server and start chatting</h2>
+
+        <button class="welcome-button" style="float: left;">
+          <h1>Source code</h1>
+        </button>
+
+        <button class="welcome-button" style="float: right;">
+          <h1>Our server</h1>
+        </button>
+      </div>
+      <div id="message-compose-bar">
+        <textarea id="message-input" type="text"></textarea>
+        <button id="send-message-btn">➜</button>
+      </div>
+    </div>
+
+    <div id="member-bar"></div>
+
+  </main>
+
+<!--   <script>
+    if (window.matchMedia("(max-width: 768px)").matches) {
+      window.serverBar.addEventListener("wheel", e => {
+        if (e.deltaY > 0) {
+          window.serverBar.scrollLeft += 25
+        } else {
+          window.serverBar.scrollLeft -= 25
+        }
+        e.preventDefault()
+      })
+    }
+  </script> -->
 
 </body>
 
